ros2_px4_workspace/log/build_2024-04-14_12-47-52/px4_offboard/stdout_stderr.log
running egg_info
writing ../../../build/px4_offboard/px4_offboard.egg-info/PKG-INFO
writing dependency_links to ../../../build/px4_offboard/px4_offboard.egg-info/dependency_links.txt
writing entry points to ../../../build/px4_offboard/px4_offboard.egg-info/entry_points.txt
writing requirements to ../../../build/px4_offboard/px4_offboard.egg-info/requires.txt
writing top-level names to ../../../build/px4_offboard/px4_offboard.egg-info/top_level.txt
reading manifest file '../../../build/px4_offboard/px4_offboard.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../../build/px4_offboard/px4_offboard.egg-info/SOURCES.txt'
running build
running build_py
copying px4_offboard/__init__.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
copying px4_offboard/processes.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
copying px4_offboard/velocity_control.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
copying px4_offboard/runQGC.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
copying px4_offboard/visualizer.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
copying px4_offboard/control.py -> /home/ross/ros2_px4_workspace/build/px4_offboard/build/lib/px4_offboard
running install
running install_lib
byte-compiling /home/ross/ros2_px4_workspace/install/px4_offboard/lib/python3.10/site-packages/px4_offboard/processes.py to processes.cpython-310.pyc
  File "/home/ross/ros2_px4_workspace/install/px4_offboard/lib/python3.10/site-packages/px4_offboard/processes.py", line 15
    "cd && cd ~/PX4-Autopilot && PX4_GZ_WORLD=demo PX4_GZ_MODEL_POSE="0,0,0,0,0,0" make px4_sitl gz_x500",
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
copying resource/px4_offboard -> /home/ross/ros2_px4_workspace/install/px4_offboard/share/ament_index/resource_index/packages
copying resource/visualize.rviz -> /home/ross/ros2_px4_workspace/install/px4_offboard/share/ament_index/resource_index/packages
copying package.xml -> /home/ross/ros2_px4_workspace/install/px4_offboard/share/px4_offboard
copying launch/offboard_velocity_control.launch.py -> /home/ross/ros2_px4_workspace/install/px4_offboard/share/px4_offboard
copying resource/visualize.rviz -> /home/ross/ros2_px4_workspace/install/px4_offboard/share/px4_offboard
running install_egg_info
removing '/home/ross/ros2_px4_workspace/install/px4_offboard/lib/python3.10/site-packages/px4_offboard-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../../build/px4_offboard/px4_offboard.egg-info to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/python3.10/site-packages/px4_offboard-0.0.0-py3.10.egg-info
running install_scripts
Installing control script to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/px4_offboard
Installing offboard_control script to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/px4_offboard
Installing processes script to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/px4_offboard
Installing velocity_control script to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/px4_offboard
Installing visualizer script to /home/ross/ros2_px4_workspace/install/px4_offboard/lib/px4_offboard
writing list of installed files to '/home/ross/ros2_px4_workspace/build/px4_offboard/install.log'
